--- a/.github/workflows/git-metadata.yaml
+++ b/.github/workflows/git-metadata.yaml
@@ -10,34 +10,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: install git-describe
+        run: npm install @contiamo/git-describe
+
       - name: Run Git Operations Script
         uses: actions/github-script@v7
         with:
           script: |
             const { getSemanticVersion } = require('@contiamo/git-describe');
 
-            async function git(args) {
-              let stdout = '';
-              let stderr = '';
-              const options = {};
-              options.listeners = {
-                stdout: (data) => {
-                  stdout += data.toString();
-                },
-                stderr: (data) => {
-                  stderr += data.toString();
-                },
-              };
-              const returnCode = await exec.exec('git', args, options);
-              if (returnCode !== 0) {
-                throw new Error(stderr.trim());
-              }
-              return stdout.trim();
-            }
-
             let sha = '';
             try {
-              sha = await git(['rev-parse', '--short', 'HEAD']);
+              // truncate the SHA to 7 characters
+              sha = context.sha.slice(0, 7);
+
               core.setOutput('shortSHA', sha);
             } catch (error) {
               const msg = error instanceof Error ? error.message : String(error);
